Fix maximize restore sizing and header gap

--- a/src/_sass/layouts/_global.scss
+++ b/src/_sass/layouts/_global.scss
@@ -23,6 +23,10 @@
   border-right: $secondary-border;
 }
 
+.container.is-maximized {
+  border-left: none;
+  border-right: none;
+}
 .div_article {
   top: 0;
   height: 100vh;
